        ------------------  --------------------
        toolBar             commandToolBar
        colorIcons          colorWMIcons
	dataWindow          openDataWindow
        sourceWindow        openSourceWindow
        debuggerConsole     openDebuggerConsole
        traceDialog         trace
        traceShellCommands  trace
        ungrabMousePointer  checkGrabs

      Please rename all references to the old DDD resources.
    - To enable a DDD 2.x style window layout, use

	Ddd*commonToolBar:    off
	Ddd*toolbarsAtBottom: on

      in your `~/.ddd/init' file.  For a full DDD 2.x look, disable images
      and captions via `Edit | Preferences | Startup | Toolbar Appareance'.
    - Be sure not to leave `Ddd' app-defaults files from previous
      versions behind.  DDD does not require app-defaults files; in
      fact, we recommend strongly *NOT* to use or install them.

    And once more, several more minor improvements and bug fixes; see
    the `ChangeLog' file for details.



DDD 2.2.3
---------

    DDD 2.2.3 fixes some problems reported for DDD 2.2.2:
    - `struct' recognition with DBX now works again.  (This one was serious.)
    - `configure' now checks for correct ISO C++ <stdexcept>.
    - DDD now runs under the `tvtwm' virtual desktop.
    - DBX Settings now work with Solaris DBX.


DDD 2.2.2
---------

    DDD 2.2.2 brings improved FORTRAN support, improvements in the
    data display and fixes some minor bugs introduced in DDD 2.2.

    User-visible changes to DDD 2.2.1:
    - Improved FORTRAN support.  When debugging FORTRAN programs with
      GDB, DDD now supports FORTRAN array indexing syntax, FORTRAN
      pointer recognition, and lookup of FORTRAN functions with
      trailing underscore `_'.
    - The data display is now scope-sensitive: displays are
      automatically hidden as they become inactive (out of scope) and
      redisplayed as they become active again.  This is handy when